With comments after review #2

--- a/index.html
+++ b/index.html
@@ -152,8 +152,10 @@
                                 alt="улыбающийся парень"
                                 width="270"
                             />
-                            <h3 class="team-title">Игорь Демьяненко</h3>
-                            <p class="team-description">Product Designer</p>
+                            <div class="team-info">
+                                <h3 class="team-title">Игорь Демьяненко</h3>
+                                <p class="team-description">Product Designer</p>
+                            </div>
                         </li>
                         <li class="team-item">
                             <img
@@ -162,8 +164,12 @@
                                 alt="красивая девушка"
                                 width="270"
                             />
-                            <h3 class="team-title">Ольга Репина</h3>
-                            <p class="team-description">Frontend Developer</p>
+                            <div class="team-info">
+                                <h3 class="team-title">Ольга Репина</h3>
+                                <p class="team-description">
+                                    Frontend Developer
+                                </p>
+                            </div>
                         </li>
                         <li class="team-item">
                             <img
@@ -172,8 +178,10 @@
                                 alt="парень в голубой рубашке"
                                 width="270"
                             />
-                            <h3 class="team-title">Николай Тарасов</h3>
-                            <p class="team-description">Marketing</p>
+                            <div class="team-info">
+                                <h3 class="team-title">Николай Тарасов</h3>
+                                <p class="team-description">Marketing</p>
+                            </div>
                         </li>
                         <li class="team-item">
                             <img
@@ -182,8 +190,10 @@
                                 alt="парень в черной футболке"
                                 width="270"
                             />
-                            <h3 class="team-title">Михаил Ермаков</h3>
-                            <p class="team-description">UI Designer</p>
+                            <div class="team-info">
+                                <h3 class="team-title">Михаил Ермаков</h3>
+                                <p class="team-description">UI Designer</p>
+                            </div>
                         </li>
                     </ul>
                 </div>
